# alecrim-fiap-tech-challenge-tres

./: .env_template  .gitignore  README.md  pyproject.toml  requirements.txt  story_telling.md
archive/: 02_rede_neural.ipynb  modelo_preditivo copy.ipynb  modelo_preditivo.ipynb  temp copy.ipynb  temp.ipynb
config/: config.py  csv_config.yaml  settings.toml
data/raw/: 2023-11.csv  2023-12.csv  2024-01.csv  2024-02.csv  2024-03.csv  2024-04.csv  2024-05.csv  2024-06.csv  2024-07.csv  2024-08.csv  2024-09.csv  2024-10.csv
front/: streamlit_app.py  utils.py
lambda_functions/get_data/: README.md  lambda_function.py  requirements.txt
lambda_functions/get_data_delta/: Dockerfile  README.md  lambda_function.py  requirements.txt
lambda_functions/glue_data/: lambda_function.py  requirements.txt
lambda_functions/glue_data_delta/: README.md  lambda_function.py  requirements.txt
lambda_functions/predict_data/: README.md  lambda_function.py  requirements.txt
lambda_functions/predict_data_delta/: README.md  lambda_function.py  requirements.txt
ml_models/: lgbm.joblib  min_max_scaler.joblib  prophet_por_dia.joblib  prophet_por_hora.joblib  prophet_por_mes.joblib  svr.joblib
ml_models/batteries/: prophet_dia.joblib  prophet_hora.joblib  prophet_mes.joblib
notebooks/: 00_dados_historicos.ipynb  01_eda.ipynb  02_criando_dados_treino_teste.ipynb  03_modelo_preditivo.ipynb
scripts/: 00_get_initial_data.py  01_split_train_test_data.py  02_train_model.py  02_train_model_lgbm.py  03_train_model_prophet.py  03_validate_model.py  04_validate_model.py
src/: utils.py
(+33 files in other folders)
